--- a/project/home/templates/home/navbar.html
+++ b/project/home/templates/home/navbar.html
@@ -6,7 +6,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home:index' %}">inicio</a></li>
-                <li class="nav-item"><a class="nav-link" href={% url 'home:index' %}>Reservar Clase</a></li>
+                <li class="nav-item"><a class="nav-link" href={% url 'alumno:index' %}> Edicion alumnos</a></li>
    
             
                 <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
