creado crud de profesor

--- a/project/home/templates/home/navbar.html
+++ b/project/home/templates/home/navbar.html
@@ -7,6 +7,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home:index' %}">inicio</a></li>
                 <li class="nav-item"><a class="nav-link" href={% url 'alumno:index' %}> Edicion alumnos</a></li>
+                <li class="nav-item"><a class="nav-link" href={% url 'profesor:index' %}> Edicion profesor</a></li>
    
             
                 <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
