--- a/project/home/templates/home/navbar.html
+++ b/project/home/templates/home/navbar.html
@@ -8,6 +8,7 @@
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home:index' %}">inicio</a></li>
                 <li class="nav-item"><a class="nav-link" href={% url 'alumno:index' %}> Edicion alumnos</a></li>
                 <li class="nav-item"><a class="nav-link" href={% url 'profesor:index' %}> Edicion profesor</a></li>
+                <li class="nav-item"><a class= "nav-link" href="{% url 'profesor_materia:profesor_materia_list' %}" > Acceso</a></li>
    
             
                 <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
