--- a/project/profesor_materia/templates/profesor_materia/profesor_materia_list.html
+++ b/project/profesor_materia/templates/profesor_materia/profesor_materia_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Lista de profesores
+    Lista de profesores y materias que dictan
 {% endblock title %}
 
 {% block content %}
