se creo el modelo de clase_particular

--- a/project/profesor_materia/templates/profesor_materia/profesor_materia_form.html
+++ b/project/profesor_materia/templates/profesor_materia/profesor_materia_form.html
@@ -15,7 +15,7 @@
             <input type="submit" value="Enviar">
         </table>
     
-        <p><a href=" {% url 'profesor:index' %} " > Ir al menu de profesores</a></p>
+        <p><a href=" {% url 'profesor_materia:profesor_materia_list' %} " > Ir al menu de profesores</a></p>
 
     </form>
 
